--- a/bnbl/pubspec.yaml
+++ b/bnbl/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   # image_picker: ^1.1.2
   camera: ^0.10.0+1
   flutter_dotenv: ^5.1.0
+  intl: ^0.19.0
+  share_plus: ^7.2.2
+  document_file_save_plus: ^2.0.0
+  file_saver: ^0.1.1
+  file_picker: ^8.0.0
 
 
 
