--- a/bnbl/pubspec.yaml
+++ b/bnbl/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   injectable: ^2.3.5
   dio: ^5.7.0
-  http: ^1.2.2
+  # http: ^1.2.2
   path: ^1.8.1
   path_provider: ^2.0.11
   auto_route: ^9.2.2
@@ -57,10 +57,10 @@ dependencies:
   camera: ^0.10.0+1
   flutter_dotenv: ^5.1.0
   intl: ^0.19.0
-  share_plus: ^7.2.2
-  document_file_save_plus: ^2.0.0
-  file_saver: ^0.1.1
-  file_picker: ^8.0.0
+  # share_plus: ^7.2.2
+  # document_file_save_plus: ^2.0.0
+  # file_saver: ^0.1.1
+  # file_picker: ^8.0.0
 
 
 
