--- a/bnbl/pubspec.yaml
+++ b/bnbl/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   camera: ^0.10.0+1
   flutter_dotenv: ^5.1.0
   intl: ^0.19.0
+  fluttertoast: ^8.2.2
+
   # share_plus: ^7.2.2
   # document_file_save_plus: ^2.0.0
   # file_saver: ^0.1.1
